Version 0.4.0	- 
  - Generate ADO database queries
  - Generate Mysql and Sqlite schemas

Version 0.3.0	- May 2011
  - Generate ADO database model
  - Generate a basic AWA/ASF project